--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -16,3 +16,11 @@ spring.ai.openai.chat.options.response-format.type=JSON_SCHEMA
 spring.ai.openai.chat.options.response-format.name=MySchemaName
 spring.ai.openai.chat.options.response-format.schema={"type":"object","properties":{"steps":{"type":"array","items":{"type":"object","properties":{"explanation":{"type":"string"},"output":{"type":"string"}},"required":["explanation","output"],"additionalProperties":false}},"final_answer":{"type":"string"}},"required":["steps","final_answer"],"additionalProperties":false}
 spring.ai.openai.chat.options.response-format.strict=true
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+jwt.secret=greatstack
+
+
