--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -21,6 +21,6 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-jwt.secret=greatstack
+jwt.secret=dentalclinic-123456789101112131415
 
 
