--- a/BE/src/main/resources/application.properties
+++ b/BE/src/main/resources/application.properties
@@ -22,6 +22,10 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 jwt.secret=dentalclinic-123456789101112131415
+aws.accessKeyId=${API_ACCESS_KEY}
+aws.secretKey=${API_SECRET_KEY}
+aws.bucketName=dcmoop
+aws.region=us-east-1
 
 
 
