--- a/FE/frontend/package.json
+++ b/FE/frontend/package.json
@@ -14,6 +14,7 @@
     "frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5"
   },
