--- a/FE/frontend/package.json
+++ b/FE/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "frontend": "file:",
+    "model": "^6.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.3",
